 * Refuse to accept a default branch that is not a top-level branch.
 * Make check of illegal filename characters dependent on the target VCS.
 * Improve error reporting for invalid date strings in CVS.
 * Many documentation improvements.
 * Allow grafting a branch onto a parent that has itself been grafted.
 * Slightly improve choice of parent branch for vendor branches.

 Miscellaneous:
 * Sort large files using Python to avoid dependency on GNU sort.


Version 2.3.0 (22 August 2009)
------------------------------

 New features:
 * Add a "cvs2git" script for starting conversions to git (or Mercurial).
 * Add a "cvs2bzr" script for starting conversions to Bazaar.
 * Generate manual pages automatically via new --man option.
 * Allow --mime-types and --auto-props options to be specified more than once.
 * Support author transforms when converting to Subversion.
 * Allow unlabeled branches to be renamed using SymbolTransforms.

 Bugs fixed:
 * cvs2git with non-inline blobs: a revision after a delete could be empty.
 * Fix timezone handling under Windows (which does not respect TZ variable).
 * Do path comparisions platform-independently in symbol transform classes.
 * Fix https://bugs.launchpad.net/pld-linux/+bug/385920

 Improvements and output changes:
 * Output error message if a revision's deltatext is missing.
 * Improve contrib/verify-cvs2svn.py (used for testing conversion accuracy).

 Miscellaneous:
 * Add an IgnoreSymbolTransform class, for ignoring symbols matching a regexp.
 * Remove some DeprecationWarnings when running under newer Python versions.


Version 2.2.0 (23 November 2008)
--------------------------------

 New features:
 * cvs2git: Omit fixup branch if a tag can be copied from an existing revision.
 * cvs2git: Add option to set the maximum number of merge sources per commit.
 * Allow arbitrary SVN directories to be created when a project is created.
 * Allow vendor branches to be excluded, grafting child symbols to trunk.